# Manipulation-testing

./: .env.example  .gitignore  README.md  pyproject.toml
config/: so101.yaml
src/robot_manipulator/: __init__.py  arm.py  cameras.py
src/robot_manipulator/scripts/: __init__.py  calibrate.py  pick_and_place.py  teleoperate.py
src/robot_manipulator/tasks/: __init__.py
tests/: test_smoke.py
